--- a/public/css/main.css
+++ b/public/css/main.css
@@ -400,7 +400,7 @@ a{
         border-radius: 20px;
         padding: 10px;
         color: #7f8a9a;
-        text-align: center;
+        text-align: left;
         margin-top: 5px;
         width: 100%;
     }
