--- a/views/certificate.html
+++ b/views/certificate.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="projects" data-aos="fade-up">
-    <h1 class="inline-center hl1">CERTIFICATES</h1>
+    <h1 class="inline-center hl1" style="color:black">CERTIFICATES</h1>
     <br><br>
     <h1 style="color: white; text-align: center;">Here are my certificates from FreeCodeCamp.org</h1>
     <br><br>
