--- a/views/projects.html
+++ b/views/projects.html
@@ -28,7 +28,7 @@
 </section>
 
 <section id="projects" data-aos="fade-up">
-    <h1 class="inline-center hl1">Projects</h1>
+    <h1 class="inline-center hl1" style="color:black">Projects</h1>
     <br><br>
     <h1 style="color: white; text-align: center;">Here are some of my projects which ive done over the years...</h1>
     <br><br>
@@ -293,7 +293,25 @@
                 <h2>E-Waste Management</h2>
                 <p>This is a project made to show the importance of clearing out ewaste which is produced...</p>
                 <br>
-                <a class="view" href="https://eleganthopefulmisrac.meheer007.repl.co"target="_blank">View</a>
+                <a class="view" href="https://E-waste-management.sujajana2609.repl.co"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem" data-aos="zoom-out-left">
+            <img src="css/images/29.jpeg" alt="" />
+            <div class="content">
+                <h2>Login And Sign-up Page</h2>
+                <p>A simple login and sign up page made by me for future references...</p>
+                <br>
+                <a class="view" href="https://github.com/Meheer17/LoginPage" target="_blank">Github</a>
+            </div>
+        </div>
+        <div class="p-elem" data-aos="zoom-out-left">
+            <img src="css/images/30.jpeg" alt="" />
+            <div class="content">
+                <h2>My Present Website</h2>
+                <p>Well nothing to be surprised, well yes this is website ur seing now... I've put it on my projects page as this is also one of my work...</p>
+                <br>
+                <a class="view" href="https://github.com/Meheer17/My-Website" target="_blank">Github</a>
             </div>
         </div>
         
