--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 	    <div class="circle-logo">
             <img src="css/images/MJ.png" alt=""/>
         </div> 
-             <h3><mono style="color: white; text-align: center;">MAHI</mono></h3>
+             <h3><mono style="color: white; text-align: center;">MEHEER</mono></h3>
 	    <nav class="navbar">
 	    	<ul class="navbar-links">
 		        <li><a href="/">Home</a></li>
@@ -44,12 +44,12 @@
     </section>
 
     <section id="abt" data-aos="fade-up">
-        <h2 class="inline-center hl1">Profile</h2>
+        <h2 class="inline-center hl1" style="color:black">Profile</h2>
         <div class="container">
 
             <div class="sub" data-aos="slide-up">
                 <h2 class="inline-center" style="color: white">About Me!!</h2>
-                <h3>Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. My favorite framework as of now is Node.js and make for backend. I'm really good at learning on my own which is really important for a web developer. I've learnt all of my coding from FreeCodeCamp.org on my own and this was really some long way... But it did really worth the time i spent on this. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game and I love watching anime. Thank you for checking my website out, check my github for many more stuff and also my discord to talk to me!!</h3>
+                <h3>Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. I currentely am a High School Student. My favorite framework as of now is Node.js and make backend part and a few API. I'm really good at learning on my own which is really important for a web developer. I've learnt coding from <a href="https://www.freecodecamp.org/" target="_blank" >FreeCodeCamp.org</a> on my own and this was really some long way... But it did really worth the time I spent on this. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game and I love watching anime. Thank you for checking my website out, check my github for many more stuff and also my discord to get in touch with me!!</h3>
             </div>
 
             <div class="s-grid" data-aos="fade-up">
@@ -64,19 +64,20 @@
                         <li>MONGOOSE</li>
                         <li>MONGODB</li>
                         <li>GIT</li>
+                        <li>PYTHON</li>
                     </ul>
                 </div>
                 <div class="sub2" data-aos="slide-left">
                     <h2 class="inline-center" style="color: white">Teach</h2>
-                    <h3 >I would love to teach web development to anyone interested! If you are interested in web development, don't hesitate to call or email me. I can do google meet, and we can go through anything I have listed on this website. You can find my email and phone number in the footer of the page. I am also happy to take a look at any job offers that come my way.</h3>
+                    <h3 >I would love to teach web development to anyone interested! If you are interested in web development, don't hesitate to call or email me. I can teach you through google meet, and we can go through anything I have listed on this website. You can find my email and phone number in at the bottom of this page. I am also happy to take a look at any job offers that come my way.</h3>
                 </div>
                 <div class="sub2" data-aos="slide-right">
                     <h2 class="inline-center" style="color: white">What I've Worked On</h2>
-                    <h3>As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which I'll be showing in the projects section... Be sure to check them out while ur here!!</h3>
+                    <h3>As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which are presented in the projects section... Be sure to check them out while ur here!!</h3>
                 </div>
                 <div class="sub2" data-aos="slide-left">
-                    <h2 class="inline-center" style="color: white">Reason For Presenting This</h2>
-                    <h3>This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really good to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it!! and started to </h3>
+                    <h2 class="inline-center" style="color: white">Why Am I Presenting This?</h2>
+                    <h3>This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really amazing / attractive to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it and it seemed to be easy and finally ended up starting this fun jorney towards being a web developer... </h3>
                 </div>
 
             </div>
