comments section added

--- a/views/projects.html
+++ b/views/projects.html
@@ -5,19 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script defer crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
+    <script defer crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <script src="navbar.js" type="text/babel"></script>
+    <script defer src="navbar.js" type="text/babel"></script>
     <script src="index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Projects</title>
 </head>
 <body>
-<div id="NAVBAR"></div>
-
+<div id="header">
+	    <div class="circle-logo">
+            <img src="css/images/MJ.png" alt=""/>
+        </div> 
+             <h3><mono class="white">MEHEER</mono></h3>
+	    <nav class="navbar">
+	    	<ul class="navbar-links">
+		        <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/certificates">Certificates</a></li>
+                <li><a href="/comments">Comments</a></li>
+                <li><a href="/sign-up">Sign-Up</a></li>
+		    </ul>
+	    </nav>
+	    <div class="hamburger">
+			<div class="line1"></div>
+			<div class="line2"></div>
+			<div class="line3"></div>
+	    </div>
+        </div>
 
 <section id="welcome">
 
@@ -296,6 +314,23 @@
                 <a class="view" href="https://E-waste-management.sujajana2609.repl.co"target="_blank">View</a>
             </div>
         </div>
+    </div>
+    <br><br>
+    
+    <h3  style="color: white;" data-aos="fade-left">Projects integrated to this present website:- </h3>    
+    <br><br>
+    <div class="p-grid" data-aos="fade-up-right">
+        
+        <div class="p-elem" data-aos="zoom-in-right    ">
+            <img src="css/images/30.jpeg" alt="" />
+            <div class="content">
+                <h2>My Present Website</h2>
+                <p>Well nothing to be surprised, well yes this is website ur seing now... 
+                    I've put it on my projects page as this is also one of my work...</p>
+                <br>
+                <a class="view" href="https://github.com/Meheer17/My-Website" target="_blank">Github</a>
+            </div>
+        </div>
         <div class="p-elem" data-aos="zoom-out-left">
             <img src="css/images/29.jpeg" alt="" />
             <div class="content">
@@ -306,12 +341,12 @@
             </div>
         </div>
         <div class="p-elem" data-aos="zoom-out-left">
-            <img src="css/images/30.jpeg" alt="" />
+            <img src="css/images/32.jpeg" alt="" />
             <div class="content">
-                <h2>My Present Website</h2>
-                <p>Well nothing to be surprised, well yes this is website ur seing now... I've put it on my projects page as this is also one of my work...</p>
+                <h2>Comments</h2>
+                <p>This project is based on adding a comment to the database and getting them to a page by formating them from a json text...</p>
                 <br>
-                <a class="view" href="https://github.com/Meheer17/My-Website" target="_blank">Github</a>
+                <a class="view" href="https://github.com/Meheer17/comments-1set" target="_blank">Github</a>
             </div>
         </div>
         
