--- a/public/css/main.css
+++ b/public/css/main.css
@@ -344,7 +344,7 @@ a{
 }
     
 .p-elem:hover img{
-    filter: grayscale(100%)
+    filter: blur(5px)
 } 
 
 .p-elem:hover .content{
@@ -380,7 +380,7 @@ a{
     .center{
         text-align: center;
         padding-top: 45vh;
-        padding-left: 87vh;
+        text-size: 40px;
     }
     .foot{
         margin-top: 150px;
@@ -392,7 +392,7 @@ a{
     }
 
     #welcome{
-        display: none;
+        background-image: linear-gradient(62deg, #1d1d1d9d 0%, #1b1b1b9d 100%) ,url('images/31.jpeg');
     }
 
     .footItem{
@@ -417,4 +417,128 @@ a{
         height: 270px;
     }
 
+}
+
+#submitbutton {
+    margin: 10px 0 10px 0;
+    width: 100%;
+    color: rgb(255, 255, 255);
+    background-color: rgb(88, 88, 88) ;
+    border: 2px solid #00e1ff;
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+#linko {
+    text-decoration: none;
+    color: aqua;
+}
+
+.signin{
+    margin: 10px;
+    padding-bottom:10px;
+    border-radius: 10px;
+    width:  300px;
+    padding: 5px;
+}
+.signup{
+    margin: 10px;
+    padding-bottom:10px;
+    border-radius: 10px;
+    width:  300px;
+    padding: 5px;
+}
+
+.dnh{
+    display: block;
+}
+#pain{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#oof{
+    width: 100%;
+    color: white;
+    margin-top: 30vh;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+.mc {
+    box-shadow: 10px 10px 15px #004cff;
+    padding: 5px;
+    border-radius: 15px; 
+}
+input{
+    margin: 10px 0 10px 0;
+    background-color: black;
+    width: 100%;
+    height: 30px;
+    padding: 3px;
+    color: rgb(230, 164, 42);
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px solid black; 
+    border-right: 5px solid #00e1ff;
+    border-left: 5px solid #00e1ff;
+}
+
+.box {
+    background: linear-gradient(68deg, #74ebd5, #acb6e5);
+    width: 50%;
+    padding: 10px;
+    color: #000;
+    border-radius: 10px;
+    border: 1px solid black;
+    margin: 10px;
+} 
+
+textarea {
+    margin: 10px 0 10px 0;
+    background-color: black;
+    width: 100%;
+    padding: 3px;
+
+    color: rgb(230, 164, 42);
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px solid black; 
+    border-right: 5px solid #00e1ff;
+    border-left: 5px solid #00e1ff;
+}
+
+h3 {
+    margin-top: 10px;
+}
+
+#com {
+    height: 50px; 
+}
+
+.white {
+    color: white;
+}
+
+.op {
+    width: 380px;
+    box-shadow: 10px 10px 15px #004cff;
+    padding: 5px;
+    border-radius: 15px; 
+}
+
+#display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media only screen and (max-width: 500px) {
+    #box {
+        margin-top: 30vh; 
+        width: 450px;
+    }
 }
