--- a/views/certificate.html
+++ b/views/certificate.html
@@ -5,18 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
     
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script defer crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script defer crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <script src="navbar.js" type="text/babel"></script>
+    <script defer src="navbar.js" type="text/babel"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Certificates</title>
 </head>
 <body>
-<div id="NAVBAR"></div>
+<div id="header">
+	    <div class="circle-logo">
+            <img src="css/images/MJ.png" alt=""/>
+        </div> 
+             <h3><mono class="white">MEHEER</mono></h3>
+	    <nav class="navbar">
+	    	<ul class="navbar-links">
+		        <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/certificates">Certificates</a></li>
+                <li><a href="/comments">Comments</a></li>
+                <li><a href="/sign-up">Sign-Up</a></li>
+		    </ul>
+	    </nav>
+	    <div class="hamburger">
+			<div class="line1"></div>
+			<div class="line2"></div>
+			<div class="line3"></div>
+	    </div>
+        </div>
 
 <section id="welcome">
 
