--- a/views/pug/comments.pug
+++ b/views/pug/comments.pug
@@ -46,7 +46,7 @@ section(style='padding-top: 80px;' data-aos='fade-up')
         su Add Comment
   #display
 section.foot
-  p.footItem Meheer &amp;copy 2021
+  p.footItem Meheer @ 2021
   p.footItem
     a(style='text-decoration: none; color: #7f8a9a;' href='mailto:meherr17.j@gmail.com')
       i.fab.fa-mailchimp
