--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -28,8 +28,9 @@ head
         a(href='/certificates') Certificates
       li
         a(href='/comments') Comments
-      li
-       a(href='/sign-up') Sign-Up
+      if show  
+        li
+          a(href='/sign-up') Sign-Up
   .hamburger
     .line1
     .line2
@@ -65,13 +66,13 @@ section#abt(data-aos='fade-up')
       .sub2(data-aos='slide-right')
         h2.inline-center(style='color: white') What I&apos;ve Worked On
         h3
-          | As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which are presented in the projects section... Be sure to check them out while ur here!!
+          | As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which are presented in the projects section... Be sure to check them out while your here!!
       .sub2(data-aos='slide-left')
         h2.inline-center(style='color: white') Why Am I Presenting This?
         h3
           | This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really amazing / attractive to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it and it seemed to be easy and finally ended up starting this fun jorney towards being a web developer...
 section.foot
-  p.footItem Meheer &amp;copy 2021
+  p.footItem Meheer @ 2021
   p.footItem
     a(style='text-decoration: none; color: #7f8a9a;' href='mailto:meherr17.j@gmail.com')
       i.fab.fa-mailchimp
