--- a/views/pug/projects.pug
+++ b/views/pug/projects.pug
@@ -47,6 +47,7 @@ section#projects(data-aos='fade-up')
   h3(style='color: white;' data-aos='fade-up') My First Five projects:- 
   br
   br
+
   .p-grid(data-aos='fade-up-left')
     .p-elem(data-aos='zoom-in-up')
       img(src='css/images/1.jpeg' alt='')
@@ -56,6 +57,7 @@ section#projects(data-aos='fade-up')
           | This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..
         br
         a.view(href='/projects/tribute-page' target='_blank') View
+
     .p-elem(data-aos='zoom-in-up')
       img(src='css/images/2.jpeg' alt='')
       .content
@@ -300,7 +302,7 @@ section#projects(data-aos='fade-up')
         br
         a.view(href='https://github.com/Meheer17/comments-1set' target='_blank') Github
 section.foot
-  p.footItem Meheer &amp;copy 2021
+  p.footItem Meheer @ 2021
   p.footItem
     a(style='text-decoration: none; color: #7f8a9a;' href='mailto:meherr17.j@gmail.com')
       i.fab.fa-mailchimp
