--- a/views/pug/certificate.pug
+++ b/views/pug/certificate.pug
@@ -86,7 +86,7 @@ section#projects(data-aos='fade-up')
         br
         a.view(href='https://www.freecodecamp.org/certification/zeus007/quality-assurance-v7' target='_blank') View
 section.foot
-  p.footItem Meheer &amp;copy 2021
+  p.footItem Meheer @ 2021
   p.footItem
     a(style='text-decoration: none; color: #7f8a9a;' href='mailto:meherr17.j@gmail.com')
       i.fab.fa-mailchimp
