--- a/views/pug/certificate.pug
+++ b/views/pug/certificate.pug
@@ -15,8 +15,7 @@ head
 #header
   .circle-logo
     img(src='css/images/MJ.png' alt='')
-  h3
-    mono.white MEHEER
+  h3.white.inline-center MEHEER
   nav.navbar
     ul.navbar-links
       li
@@ -35,15 +34,12 @@ head
     .line3
 section#welcome
   .center(style='position: absolute:')
-    h1.text(style='color: white;') CERTIFICATES
+    h1.text(style='color: white;' data-aos='fade-up') CERTIFICATES
 section#projects(data-aos='fade-up')
   h1.inline-center.hl1(style='color:black') CERTIFICATES
   br
   br
   h1(style='color: white; text-align: center;') Here are my certificates from FreeCodeCamp.org
-  br
-  br
-  h3(style='color: white;' data-aos='fade-right') My Certificates :- 
   br
   br
   .p-grid(data-aos='fade-up-left')
