--- a/views/pug/comments.pug
+++ b/views/pug/comments.pug
@@ -37,7 +37,7 @@ head
     .line3
 section#welcome
   .center(style='position: absolute:')
-    h1.text(style='color: white;') Comments
+    h1.text(style='color: white;' data-aos="fade-up") Comments
 section(style='padding-top: 80px;' data-aos='fade-up')
   h2.inline-center.hl1(style='color:black;') You Can View All The Comments On This Page...
   a(href='/add-comments' style='text-decoration: none; color: black;')
