--- a/views/pug/projects.pug
+++ b/views/pug/projects.pug
@@ -36,15 +36,18 @@ head
     .line3
 section#welcome
   .center(style='position: absolute:')
-    h1.text(style='color: white;') PROJECTS
+    h1.text(style='color: white;' data-aos='fade-up') PROJECTS
 section#projects(data-aos='fade-up')
   h1.inline-center.hl1(style='color:black') Projects
   br
   br
-  h1(style='color: white; text-align: center;') Here are some of my projects which ive done over the years...
+  h1(style='color: white; text-align: center;') Here are some of my projects which I've done over the years...
   br
   br
-  h3(style='color: white;' data-aos='fade-up') My First Five projects:- 
+  h3(style='color: white;' data-aos='fade-up').inline-center My First Five projects
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
 
@@ -91,7 +94,10 @@ section#projects(data-aos='fade-up')
         a.view(href='/projects/profile-1' target='_blank') View
   br
   br
-  h3(style='color: white;' data-aos='fade-right') React Projects:- 
+  h3(style='color: white;' data-aos='fade-right').inline-center React Projects
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
   .p-grid(data-aos='fade-up-left')
@@ -136,7 +142,10 @@ section#projects(data-aos='fade-up')
         a.view(href='/projects/pomodoro-clock' target='_blank') View
   br
   br
-  h3(style='color: white;' data-aos='fade-right') Api Projects:- 
+  h3(style='color: white;' data-aos='fade-right').inline-center Api Projects
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
   .p-grid(data-aos='fade-up-right')
@@ -186,7 +195,10 @@ section#projects(data-aos='fade-up')
         a.view(target='_blank' href='https://github.com/Meheer17/TRACKER-WORK') Github
   br
   br
-  h3(style='color: white;' data-aos='fade-right') Api Projects With Chai:- 
+  h3(style='color: white;' data-aos='fade-right').inline-center Api Projects With Chai
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
   .p-grid(data-aos='fade-up-left')
@@ -235,7 +247,10 @@ section#projects(data-aos='fade-up')
         a.view(target='_blank' href='https://github.com/Meheer17/SUDOKU-SOLVER') Github
   br
   br
-  h3(style='color: white;' data-aos='fade-right') Self Purpose Projects:- 
+  h3(style='color: white;' data-aos='fade-right').inline-center Self Purpose Projects
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
   .p-grid(data-aos='fade-up-right')
@@ -271,9 +286,21 @@ section#projects(data-aos='fade-up')
           | This is a project made to show the importance of clearing out ewaste which is produced...
         br
         a.view(href='https://E-waste-management.sujajana2609.repl.co' target='_blank') View
+    .p-elem(data-aos='zoom-out-left')
+      img(src='https://helpdeskgeek.com/wp-content/pictures/2019/04/share-files.png' alt='')
+      .content
+        h2 Image Uploader
+        p
+          | This is a API for uploading images to the server as we can't really save an image in mongoDB. I made this in an attempt to replicate one of the shopping websites
+        br
+        a.view(href='https://github.com/Meheer17/Image-uploader' target='_blank') Github
+
   br
   br
-  h3(style='color: white;' data-aos='fade-left') Projects integrated to this present website:- 
+  h3(style='color: white;' data-aos='fade-left').inline-center Projects integrated to this present website
+  br
+  hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+  br
   br
   br
   .p-grid(data-aos='fade-up-right')
@@ -301,6 +328,8 @@ section#projects(data-aos='fade-up')
           | This project is based on adding a comment to the database and getting them to a page by formating them from a json text...
         br
         a.view(href='https://github.com/Meheer17/comments-1set' target='_blank') Github
+    
+    
 section.foot
   p.footItem Meheer @ 2021
   p.footItem
