--- a/views/pug/sign.pug
+++ b/views/pug/sign.pug
@@ -49,5 +49,5 @@ head
           input#password(type='password' name='password' placeholder='Password...' required='')
           button#submitbutton(type='submit') Sign up!!
           p
-            | Have a account already? 
+            | Have an account already? 
             a#linko(href='/login') Login!!
