--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -37,40 +37,65 @@ head
     .line3
 section#welcome
   .center(style='position: absolute:')
-    h1.text(style='color: white;') HEYY, I&apos;M MEHEER
+    h1.text(style='color: white;' data-aos="slide-up") HEYY, I&apos;M MEHEER
 section#abt(data-aos='fade-up')
   h2.inline-center.hl1(style='color:black') Profile
   .container
     .sub(data-aos='slide-up')
-      h2.inline-center(style='color: white') About Me!!
-      h3
+      h2(style='color: white;').inline-center About Me
+      br
+      hr(style="width: 20%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+      br
+      p.inline-center.pbox
         | Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. I currentely am a High School Student. My favorite framework as of now is Node.js and make backend part and a few API. I&apos;m really good at learning on my own which is really important for a web developer. I&apos;ve learnt coding from 
         a(href='https://www.freecodecamp.org/' target='_blank') FreeCodeCamp.org
         |  on my own and this was really some long way... But it did really worth the time I spent on this. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game and I love watching anime. Thank you for checking my website out, check my github for many more stuff and also my discord to get in touch with me!!
+    br
     .s-grid(data-aos='fade-up')
       .sub2(data-aos='slide-right')
-        h2.inline-center(style='color: white') What Have I Learnt? 
-        ul(style='padding-left: 15px;')
-          li HTML
-          li CSS
-          li JAVASCRIPT
-          li NODE.JS
-          li MONGOOSE
-          li MONGODB
-          li GIT
-          li PYTHON
+        h2.inline-center(style='color: white') What Have I Learnt?
+        br
+        hr(style="width: 40%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+        br
+        p.inline-center.pbox
+          | HTML
+          br
+          | CSS
+          br
+          | JAVASCRIPT
+          br
+          | NODE.JS
+          br
+          | MONGOOSE
+          br
+          | MONGODB
+          br
+          | GIT
+          br
+          | PYTHON
+      br
       .sub2(data-aos='slide-left')
         h2.inline-center(style='color: white') Teach
-        h3
+        br
+        hr(style="width: 40%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+        br
+        p.inline-center.pbox
           | I would love to teach web development to anyone interested! If you are interested in web development, don&apos;t hesitate to call or email me. I can teach you through google meet, and we can go through anything I have listed on this website. You can find my email and phone number in at the bottom of this page. I am also happy to take a look at any job offers that come my way.
+      br
       .sub2(data-aos='slide-right')
         h2.inline-center(style='color: white') What I&apos;ve Worked On
-        h3
+        br
+        hr(style="width: 40%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+        br
+        p.inline-center.pbox
           | As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which are presented in the projects section... Be sure to check them out while your here!!
       .sub2(data-aos='slide-left')
         h2.inline-center(style='color: white') Why Am I Presenting This?
-        h3
-          | This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really amazing / attractive to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it and it seemed to be easy and finally ended up starting this fun jorney towards being a web developer...
+        br
+        hr(style="width: 40%; margin-right:auto; margin-left: auto; border:1px solid whitesmoke; background-color: whitesmoke;")
+        br
+        p.inline-center.pbox
+          | This is really a very interesting question to answer.... So it all started when I was in 8th grade there were few interesting post on instagram and I found it really amazing / attractive to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it and it seemed to be easy and finally ended up starting this fun journey towards being a web developer...
 section.foot
   p.footItem Meheer @ 2021
   p.footItem
