--- a/views/pug/login.pug
+++ b/views/pug/login.pug
@@ -43,12 +43,12 @@ head
           br
           p.red#pug-variable= error
           br
-          h3 Username
+          h3 Username:
           input#username(type='text' name='username' placeholder='Username...' required='')
           h3 Password:
           input#password(type='password' name='password' placeholder='Password...' required='')
           br
           button#submitbutton(type='submit') Login!!
           ps
-            | Dont have a account? 
+            | Dont have an account? 
             a#linko(href='/sign-up') Sign-up!! 
